--- a/Backend/sportsmatch/build.gradle
+++ b/Backend/sportsmatch/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
 }
 
 tasks.named('bootBuildImage') {
