--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,27 +7,27 @@
 
 
 #### Uncoment this once you setup spring boot, it will run automatic tests and code style checks
-# name: Java CI with Gradle
+ name: Java CI with Gradle
 
-# on:
-#   [push,  pull_request]
+ on:
+   [push,  pull_request]
 
-# permissions:
-#   contents: read
+ permissions:
+   contents: read
 
-# jobs:
-#   build:
+ jobs:
+   build:
 
-#     runs-on: ubuntu-latest
+     runs-on: ubuntu-latest
 
-#     steps:
-#     - uses: actions/checkout@v3
-#     - name: Set up JDK 17
-#       uses: actions/setup-java@v3
-#       with:
-#         java-version: '17'
-#         distribution: 'temurin'
-#     - name: Build with Gradle
-#       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-#       with:
-#         arguments: build
+     steps:
+     - uses: actions/checkout@v3
+     - name: Set up JDK 17
+       uses: actions/setup-java@v3
+       with:
+         java-version: '17'
+         distribution: 'temurin'
+     - name: Build with Gradle
+       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+       with:
+         arguments: build
