--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,4 +31,4 @@
        uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
        with:
          arguments: build
-         build-root-directory: 'sportsmatch/backend/sportsmatch'
+         build-root-directory: 'backend/sportsmatch'
