--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,5 +30,5 @@
      - name: Build with Gradle
        uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
        with:
+         working-directory: backend/sportsmatch
          arguments: build
-         gradle-wrapper-path: backend/sportsmatch/gradle/wrapper
