SMA-11: values in application properties replaced with environment variables

--- a/backend/sportsmatch/src/main/resources/application.properties
+++ b/backend/sportsmatch/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+spring.datasource.url=${SMA_DATABASE_URL}
+spring.datasource.driver-class-name=${SMA_DATASOURCE_DRIVERCLASNAME}
+spring.datasource.username=${SMA_DATASOURCE_USERNAME}
+spring.datasource.password=${SMA_DATASOURCE_PASSWORD}
+spring.jpa.database-platform=${SMA_DATABASE_PLATFORM}
+spring.jpa.show-sql=${SMA_SPRING_JPA_SHOW_SQL}
+spring.h2.console.enabled=${SMA_ENABLE_H2_CONSOLE}
 
-spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.hiddenmethod.filter.enabled=${SMA_MVC_HIDDEN_METHOD}
