SMA-20: fixed working directory path

--- a/.github/workflows/build-gradle.yml
+++ b/.github/workflows/build-gradle.yml
@@ -20,7 +20,7 @@
      runs-on: ubuntu-latest
      defaults:
        run:
-         working-directory: .backend/sportsmatch
+         working-directory: ./backend/sportsmatch
 
      steps:
      - uses: actions/checkout@v3
