--- a/frontend/sportsmatch-app/tsconfig.json
+++ b/frontend/sportsmatch-app/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "types":["vitest/globals"],
 
     /* Linting */
     "strict": true,
@@ -20,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src",".src/test/setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
