--- a/frontend/sportsmatch-app/.eslintrc.json
+++ b/frontend/sportsmatch-app/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true     
+        "es2021": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
@@ -31,13 +32,18 @@
         "import/extensions": [ "error", "ignorePackages", { "ts": "never", "tsx": "never" } ],
         "no-shadow": "off",
         "@typescript-eslint/no-shadow": [ "error" ],
-        "@typescript-eslint/explicit-function-return-type": [ "error", { "allowExpressions": true } ],
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-unused-vars": "off",
         "max-len": [ "warn", { "code": 100, "ignoreComments": true, "ignoreUrls": true } ],
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "import/prefer-default-export": "off",
         "react/prop-types": "off",
-        "prettier/prettier": [ "error", { "endOfLine": "auto" } ]
+        "prettier/prettier": [ "error", { "endOfLine": "auto" } ],
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-uses-react": "off",
+        "import/no-unresolved": "off"
+
     },
     "settings": {
         "import/resolver": {
