--- a/frontend/sportsmatch-app/package.json
+++ b/frontend/sportsmatch-app/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint --fix ./src",
     "preview": "vite preview",
     "test": "vitest",
     "format": "prettier --check ./src",
