Fix issues causing failing GitHub Actions checks

--- a/frontend/sportsmatch-app/.eslintrc.json
+++ b/frontend/sportsmatch-app/.eslintrc.json
@@ -46,6 +46,9 @@
 
     },
     "settings": {
+        "react": {
+            "version": "detect" 
+        },
         "import/resolver": {
           "typescript": {}
         }
