--- a/backend/sportsmatch/src/main/resources/application.properties
+++ b/backend/sportsmatch/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:h2:file:./sportsmatch
+#spring.datasource.url=jdbc:h2:file:./sportsmatch
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
