--- a/backend/sportsmatch/src/main/resources/application.properties
+++ b/backend/sportsmatch/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
