SMA-91: add logging for security

--- a/backend/sportsmatch/src/main/resources/application.properties
+++ b/backend/sportsmatch/src/main/resources/application.properties
@@ -20,3 +20,5 @@ app.sportsmingle.frontend.url=http://localhost:5173
 app.sportsmingle.num-game-threshold=5,15,25
 app.sportsmingle.k-factors=25.0,15.0,10.0
 app.sportsmingle.k-factor-default=5.0
+
+logging.level.org.springframework.security=DEBUG
